@@ -2,6 +2,39 @@
 <appendix id="release_notes">
   <title>Appendix</title>
    <subtitle>Release Notes</subtitle>
+
+    <sect1>
+        <title>PostGIS 3.2.9</title>
+        <para>2026/02/07</para>
+        <para>PostgreSQL 9.6-15 required. GEOS 3.6+ required but GEOS 3.9+ to take advantage of all features. Proj 4.9+ required.</para>
+        <simplesect>
+            <title>Bug Fixes</title>
+            <para><ulink url="https://trac.osgeo.org/postgis/ticket/6023">6023</ulink>, Fix robustness issue in ptarray_contains_point (Sandro Santilli)</para>
+            <para><ulink url="https://trac.osgeo.org/postgis/ticket/5951">5951</ulink>, [topology] Fix crash in ST_GetFaceEdges with corrupted topology (Sandro Santilli)</para>
+            <para><ulink url="https://trac.osgeo.org/postgis/ticket/5947">5947</ulink>, [topology] Fix crash in ST_ModEdgeHeal (Sandro Santilli)</para>
+            <para><ulink url="https://trac.osgeo.org/postgis/ticket/5925">5925</ulink>, #5946, [topology] Have GetFaceContainingPoint survive EMPTY edges (Sandro Santilli)</para>
+            <para><ulink url="https://trac.osgeo.org/postgis/ticket/5922">5922</ulink>, [topology] Fix crash in TopoGeo_AddLinestring with EMPTY input (Sandro Santilli)</para>
+            <para><ulink url="https://trac.osgeo.org/postgis/ticket/5908">5908</ulink>, [topology] Fix crash in GetFaceContainingPoint (Sandro Santilli)</para>
+            <para><ulink url="https://trac.osgeo.org/postgis/ticket/5907">5907</ulink>, [topology] Fix crash in TopoGeo_AddPolygon with EMPTY input (Sandro Santilli)</para>
+            <para><ulink url="https://trac.osgeo.org/postgis/ticket/5876">5876</ulink>, Fix ST_AddPoint with empty point argument (Paul Ramsey)</para>
+            <para><ulink url="https://trac.osgeo.org/postgis/ticket/5818">5818</ulink>, GT-244 Fix CG_IsSolid function (Loïc Bartoletti)</para>
+            <para><ulink url="https://trac.osgeo.org/postgis/ticket/5885">5885</ulink>, Fix documentation about grid-based overlay operations (Sandro Santilli)</para>
+            <para><ulink url="https://trac.osgeo.org/postgis/ticket/5921">5921</ulink>, Crash freeing uninitialized pointer (Arsenii Mukhin)</para>
+            <para><ulink url="https://trac.osgeo.org/postgis/ticket/5912">5912</ulink>, Crash on GML with xlink and no prefix (Paul Ramsey)</para>
+            <para><ulink url="https://trac.osgeo.org/postgis/ticket/5905">5905</ulink>, Crash on deeply nested geometries (Paul Ramsey)</para>
+            <para><ulink url="https://trac.osgeo.org/postgis/ticket/5909">5909</ulink>, ST_ValueCount crashes on empty table (Paul Ramsey)</para>
+            <para><ulink url="https://trac.osgeo.org/postgis/ticket/5917">5917</ulink>, ST_Relate becomes unresponsive (Paul Ramsey)</para>
+            <para><ulink url="https://trac.osgeo.org/postgis/ticket/5991">5991</ulink>, CircularString distance error (Paul Ramsey)</para>
+            <para><ulink url="https://trac.osgeo.org/postgis/ticket/5962">5962</ulink>, Consistent clipping of MULTI/POINT (Paul Ramsey)</para>
+            <para><ulink url="https://trac.osgeo.org/postgis/ticket/5989">5989</ulink>, CurvePolygon distance error (Paul Ramsey)</para>
+            <para><ulink url="https://trac.osgeo.org/postgis/ticket/6028">6028</ulink>, Crash indexing malformed empty polygon (Paul Ramsey</para>)
+            <para><ulink url="https://github.com/postgis/postgis/pull/841">GH-841</ulink>, small memory leak in address_standardizer (Maxim Korotkov)</para>
+            <para><ulink url="https://trac.osgeo.org/postgis/ticket/5998">5998</ulink>, [tiger_geocoder] [security] CVE-2022-2625, make sure tables required
+            by extension are owned by extension
+            authored: Andrey Borodin (Yandex), reported by Sergey Bobrov (Kaspersky)</para>
+            <para><ulink url="https://trac.osgeo.org/postgis/ticket/5985">5985</ulink>, Fix configure issue with Debian 12 and 13 (Regina Obe, Sandro Santilli)</para>
+        </simplesect>
+    </sect1>
     <sect1>
         <title>PostGIS 3.2.8</title>
         <para>2024/12/22</para>
