@@ -29,6 +29,7 @@ Proj 4.9+ required.
  - #5998, [tiger_geocoder] [security] CVE-2022-2625, make sure tables required
         by extension are owned by extension
         authored: Andrey Borodin (Yandex), reported by Sergey Bobrov (Kaspersky)
+ - #5985, Fix configure issue with Debian 12 and 13 (Regina Obe, Sandro Santilli)
 
 PostGIS 3.2.8
 2024/12/22
